{
    "name": "BaseInput",
    "maps": [
        {
            "name": "Main",
            "id": "8ae54e02-a8b3-4a49-9b2c-e3fde379bc27",
            "actions": [
                {
                    "name": "ZoomIn",
                    "type": "Button",
                    "id": "6e735883-e77d-4db7-86bb-714e5d1af1c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "21f18ee2-47e1-48f4-b40f-b80d589c023b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateOn",
                    "type": "Button",
                    "id": "d527f97b-f3fd-41e8-9464-5890f28fb1b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotatePosition",
                    "type": "Value",
                    "id": "c26f0b01-c13d-47f2-af74-3afef0ff4aa4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotating",
                    "type": "Button",
                    "id": "d190e3c3-881f-495b-a2b3-d6a85f7517d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "660ef94d-f8c4-40b2-b1a2-e94109e67b68",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8fa78b7-3a91-431d-827c-305bc587ee20",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d6199a8-3cd7-40d9-82e0-6384818a90a4",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0efc9c48-5fa4-4554-81ae-b5da3259ee82",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Rotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cd3a4b4-264e-40e9-bca4-44f6e7bae8cd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}